--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@types/express": "^4.17.8",
+      "@types/jest": "^26.0.14",
       "@types/node": "^8.0.29",
+      "ts-jest": "^26.4.1",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0-pre.63",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.28",
+      "express": "^4.17.1",
+      "jest": "^26.5.0",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.28"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node index.ts",
+      "dev": "ts-node-dev --respawn -- index.ts"
    }
 }
