--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "TestMutant",
+   "name": "test-mutant",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
@@ -9,17 +9,21 @@
       "ts-jest": "^26.4.1",
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.0.0-pre.63",
-      "typescript": "3.3.3333"
+      "typescript": "^4.0.3"
    },
    "dependencies": {
+      "@types/faker": "^5.1.2",
+      "axios": "^0.20.0",
       "express": "^4.17.1",
+      "faker": "^5.1.0",
       "jest": "^26.5.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.28"
    },
    "scripts": {
-      "start": "ts-node index.ts",
-      "dev": "ts-node-dev --respawn -- index.ts"
+      "start": "ts-node ./src/index.ts",
+      "dev": "ts-node-dev --respawn -- ./src/index.ts",
+      "test": "jest --no-cache --watch"
    }
 }
