--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,21 @@
          "es5",
          "es6"
       ],
-      "target": "es5",
+      "target": "es6",
       "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "./build",
+      "rootDir": "src",
+      "baseUrl": "src",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
-   }
+      "sourceMap": true,
+      "esModuleInterop": true,
+      "paths": {
+         "@/*": ["*"]
+      }
+   },
+   "include": [
+      "src"
+   ]
 }
