--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
    "dependencies": {
       "@types/faker": "^5.1.2",
       "axios": "^0.20.0",
+      "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
       "faker": "^5.1.0",
       "jest": "^26.5.0",
