--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "express": "^4.17.1",
       "faker": "^5.1.0",
       "jest": "^26.5.0",
+      "log4js": "^6.3.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.28"
